# AvaPlatform

./: .gitignore  AGENTS.md  AI数字员工平台-售前方案.pptx  CONTEXT.md  README.md  chat_logs.md  handoff-ai-platform-20260626.md  platform-dev.sh  presale-ppt.js  start-proto.sh  start.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py  services.py
backend/app/api/: __init__.py  routes.py
backend/app/db/: __init__.py  base.py  init.py  relational_state.py  session.py
backend/app/integrations/: __init__.py  hermes.py
backend/app/models/: __init__.py  domain.py
backend/app/runtime/: __init__.py  dependencies.py  health.py  port_pool.py  profile.py
backend/app/security/: __init__.py  tokens.py
backend/app/workers/: __init__.py  rollout.py
backend/tests/: __init__.py  fixtures.py  test_budget_metrics_audit.py  test_config.py  test_end_to_end_validation.py  test_evaluation.py  test_evaluation_integration.py  test_execution_gateway.py  test_hermes_dashboard.py  test_hermes_integration.py  test_port_pool.py  test_relational_state.py  test_service_catalogs.py  test_template_employee_lifecycle.py
docs/: e2e-verification-plan.md  self-operation-marketing-strategy.md  self-operation-team-prompts.md
docs/adr/: 0001-goal-driven-delegation.md  0002-single-organization-single-admin.md  0003-skill-package-upload.md  0004-ragflow-as-first-knowledge-adapter.md  0005-platform-mediated-knowledge-retrieval.md  0006-quota-enforcement-levels.md  (+14 more)
infra/: ai-platform.compose.yml
web/: package-lock.json  package.json  vite.config.ts
(+28 files in other folders)
