[project]
name = "ai-platform-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.6.0",
  "pytest>=8.3.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
